---
source: crates/lexer/src/lexer/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: ADO,
            offset: 0,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 3,
        },
        Lexed {
            kind: AS,
            offset: 4,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 6,
        },
        Lexed {
            kind: CASE,
            offset: 7,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 11,
        },
        Lexed {
            kind: CLASS,
            offset: 12,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 17,
        },
        Lexed {
            kind: DATA,
            offset: 18,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 22,
        },
        Lexed {
            kind: DERIVE,
            offset: 23,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 29,
        },
        Lexed {
            kind: DO,
            offset: 30,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 32,
        },
        Lexed {
            kind: ELSE,
            offset: 33,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 37,
        },
        Lexed {
            kind: FALSE,
            offset: 38,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 43,
        },
        Lexed {
            kind: FOREIGN,
            offset: 44,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 51,
        },
        Lexed {
            kind: HIDING,
            offset: 52,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 58,
        },
        Lexed {
            kind: IF,
            offset: 59,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 61,
        },
        Lexed {
            kind: IMPORT,
            offset: 62,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 68,
        },
        Lexed {
            kind: IN,
            offset: 69,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 71,
        },
        Lexed {
            kind: INFIX,
            offset: 72,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 77,
        },
        Lexed {
            kind: INFIXL,
            offset: 78,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 84,
        },
        Lexed {
            kind: INFIXR,
            offset: 85,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 91,
        },
        Lexed {
            kind: INSTANCE,
            offset: 92,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 100,
        },
        Lexed {
            kind: LET,
            offset: 101,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 104,
        },
        Lexed {
            kind: MODULE,
            offset: 105,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 111,
        },
        Lexed {
            kind: NEWTYPE,
            offset: 112,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 119,
        },
        Lexed {
            kind: OF,
            offset: 120,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 122,
        },
        Lexed {
            kind: THEN,
            offset: 123,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 127,
        },
        Lexed {
            kind: TRUE,
            offset: 128,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 132,
        },
        Lexed {
            kind: TYPE,
            offset: 133,
        },
        Lexed {
            kind: WHITESPACE,
            offset: 137,
        },
        Lexed {
            kind: WHERE,
            offset: 138,
        },
        Lexed {
            kind: END_OF_FILE,
            offset: 143,
        },
    ],
)
